# QSocket

./: CMakeLists.txt  chatclient.cpp  chatclient.h  chatserver.cpp  chatserver.h  mainClient.cpp  mainServer.cpp
chatClient/: CMakeLists.txt  Main.qml  chatClientModel.cpp  chatClientModel.h  chatclient.cpp  chatclient.h  main.cpp
chatServer/: CMakeLists.txt  Main.qml  Main.qml.autosave  chatserver.cpp  chatserver.h  main.cpp
